# Glen

./: .gitmodules  CMakeLists.txt  build.py  build_run.py
shaders/: fragment.glsl  vertex.glsl
src/: camera.cpp  camera.h  editor.cpp  editor.h  gtime.cpp  gtime.h  int.h  log.h  main.cpp  mathdef.h  mesh.cpp  mesh.h  platform.cpp  platform.h  renderer.cpp  renderer.h  renderer_object.cpp  renderer_object.h  renderer_shader.cpp  renderer_shader.h  resource.cpp  resource.h
tests/res/: Suzanne.mtl  SuzanneTri.mtl
tests/res/stone/: stone.mtl
tests/res/suzanne/: suzanne.mtl
